# bot

./: .env  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  FEATURES_VALIDATION_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  botted_library_memory.db  example_usage.py  features.txt  getting_started.py  knowledge_validation.db  pyproject.toml  requirements.txt  setup.py  validate_system.py
.kiro/specs/collaborative-worker-server/: design.md  requirements.md  tasks.md
botted_library/: __init__.py  main.py  simple_worker.py
botted_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
botted_library/browser_interface/: __init__.py  actions.py  browser_controller.py  scraper.py
botted_library/compatibility/: __init__.py  v1_compatibility.py
botted_library/config/: development.json  production.json  testing.json
botted_library/core/: __init__.py  advanced_integrations.py  auto_mode_controller.py  code_executor.py  collaborative_server.py  collaborative_space.py  configuration_manager.py  enhanced_tools.py  enhanced_worker.py  enhanced_worker_registry.py  error_handler.py  error_recovery.py  exceptions.py  executor_worker.py  factory.py  interfaces.py  knowledge.py  llm_interface.py  manual_mode_controller.py  memory.py  message_router.py  mode_manager.py  monitoring_system.py  planner_worker.py  plugin_system.py  reasoning_engine.py  shared_filesystem.py  shared_whiteboard.py  simple_llm.py  system_integration.py  system_startup.py  task_executor.py  tool_optimization.py  verifier_worker.py  worker.py  worker_registry.py
botted_library/migration/: __init__.py  migration_guide.py  migration_tools.py
botted_library/utils/: __init__.py  config.py  helpers.py  logger.py
tests/: __init__.py  test_collaborative_server.py  test_collaborative_spaces_integration.py  test_comprehensive_features.py  test_enhanced_tools.py  test_enhanced_worker_registry.py  test_error_handling_monitoring.py  test_message_router.py  test_migration_guide.py  test_migration_tools.py  test_mode_controllers.py  test_requirements_validation.py  test_server_infrastructure_integration.py  test_shared_filesystem.py  test_specialized_workers.py  test_system_integration.py  test_v1_compatibility.py
